--- a/CSS/index.less
+++ b/CSS/index.less
@@ -5,23 +5,24 @@
 html,body{
     width: 100%;
     height: 100%;
-    
+    flex-wrap: wrap;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
+    flex-direction: row;
+    
 }
-
-
 .container{
     width: 1200px;
     display: flex;
     position: absolute;    
     align-items: center;
+    justify-content: center;
     z-index: 200;  
     color: white;
     .navbar{
         display: flex;
         height: 80px;
-        justify-content: space-between ;
+        justify-content: center;
         align-items: center;
         flex-grow: 1;
         .logo{
@@ -57,14 +58,9 @@ html,body{
        
     }   
 }
-:root{
-    
-    width: 100%;
-    height: 100%;
-}
 .slide{  
     height: 100%; 
-    width: 100%;
+    width: 100vw;
     display: flex;
     position: relative;
     overflow: hidden; 
@@ -72,29 +68,33 @@ html,body{
     .backdrop{
         background-color:rgba(42, 42, 42, 0.5);
         height: 100%; 
-        width: 100%;
+        width: 100vw;
+        position: absolute;
         z-index: 66;
+        overflow: hidden;
     }
     
     .slide_img{   
-        
+        width: 100%;
         display: flex;
         width: 100%;
         position: absolute;
         
         img{    
-             
+            
             width: 100vw;
             height: 100vh;
             object-fit: cover;
-          
+            
         }
     }   
 }
 .img1{
+    
     display: flex;
     justify-content: center;
     align-items: center;
+    
 }
 .slide_content{
     width: 60%;
@@ -128,7 +128,7 @@ html,body{
 }
 .left_pre{   
     z-index: 666;
-    position: absolute;
+    position:  absolute;
     font-size: 22px;
     width: 40px;
     height: 40px;
@@ -168,12 +168,44 @@ html,body{
         transition: 1s;
     }
 }
+.food_button{
+    width: 100%;
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 20px;
+    button{
+        border: 0;
+        padding: 7px 16px;
+        margin: 10px;
+        font-size: 16px;
+        color: #727272;
+        background-color: #e3e3e3;
+        border-radius: 5px;
+        &:nth-child(1){
+            background-color: #0083d0;
+            color: white;
+        }
+        &:hover{
+            background-color: #0083d0;
+            color: white;
+            cursor: pointer;
+        }
+    }
 
+}
+.food_show{
+    width: 100%;
+    margin: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    
+}
 
 @media screen and (max-width:768px){
-    
-    
-    
     .link{
         display: none !important;
     }
@@ -185,12 +217,9 @@ html,body{
     .container{                   
         width: 100% !important;                
     }
+    
     .navbar{
         width: 80% !important;
        
     }   
-    h1{
-        color:blue;
-        display: none;
-    }
 }
