--- a/CSS/index.less
+++ b/CSS/index.less
@@ -169,7 +169,7 @@ html,body{
     }
 }
 .food_button{
-    width: 100%;
+    width: 80%;
     
     display: flex;
     flex-direction: row;
@@ -197,7 +197,7 @@ html,body{
 }
 .food_show{
     width: 100%;
-    margin: 100px;
+    margin: 100px auto;
     display: flex;
     align-items: center;
     justify-content: center;
