--- a/CSS/index.css
+++ b/CSS/index.css
@@ -158,7 +158,7 @@ body {
   transition: 1s;
 }
 .food_button {
-  width: 100%;
+  width: 80%;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -184,7 +184,7 @@ body {
 }
 .food_show {
   width: 100%;
-  margin: 100px;
+  margin: 100px auto;
   display: flex;
   align-items: center;
   justify-content: center;
