--- a/CSS/index.css
+++ b/CSS/index.css
@@ -8,22 +8,23 @@ body {
   height: 100%;
   flex-wrap: wrap;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   flex-direction: row;
 }
 .container {
-  width: 1200px;
+  width: 100%;
   display: flex;
   position: absolute;
-  align-items: center;
   justify-content: center;
+  overflow: hidden;
   z-index: 200;
   color: white;
 }
 .container .navbar {
   display: flex;
-  height: 80px;
+  height: 60px;
   justify-content: center;
+  flex-wrap: wrap;
   align-items: center;
   flex-grow: 1;
 }
@@ -36,13 +37,22 @@ body {
 }
 .container .navbar .nav {
   display: flex;
-  align-items: stretch;
 }
 .container .navbar .nav .link {
   display: flex;
 }
-.container .navbar .nav .menu {
+.container .navbar .nav .link li {
+  padding: 6px;
+}
+.container .navbar .nav .link li a {
+  font-size: 14px;
+}
+.container .navbar .menu_content {
   display: none;
+  align-items: center;
+  height: 60px;
+}
+.container .navbar .menu_content .menu {
   width: 30px;
   height: 22px;
   opacity: 0.8;
@@ -54,7 +64,7 @@ body {
 .container a {
   text-decoration: none;
   color: white;
-  margin: 0 20px;
+  margin: 0 10px;
 }
 .slide {
   height: 100%;
@@ -87,10 +97,11 @@ body {
   align-items: center;
 }
 .slide_content {
-  width: 60%;
+  width: 45%;
   height: 60%;
   display: flex;
   align-items: center;
+  justify-content: space-around;
   flex-direction: column;
   position: absolute;
   z-index: 666;
@@ -183,20 +194,139 @@ body {
   cursor: pointer;
 }
 .food_show {
-  width: 100%;
+  width: 1200px;
   margin: 100px auto;
+  padding-top: 100px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
+  box-shadow: 0px 0px 18px rgba(0, 0, 0, 0.2);
 }
-@media screen and (max-width: 768px) {
-  .link {
-    display: none !important;
-  }
-  .menu {
-    display: block !important;
-  }
+.food_show .food_image {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.food_show .food_image .food_image_content {
+  width: 280px;
+  height: 150px;
+}
+.food_show .pageinfo {
+  display: flex;
+  justify-content: center;
+}
+.food_show .pageinfo div {
+  width: 24px;
+  height: 24px;
+  border-radius: 3px;
+  text-align: center;
+  line-height: 1.5em;
+  border: solid 1px #330303;
+  margin: 30px 20px;
+}
+.food_show .pageinfo div:hover {
+  background-color: #0083d0;
+  color: white;
+  cursor: pointer;
+}
+.food_show .pageinfo div:nth-child(1) {
+  background-color: #0083d0;
+  color: white;
+}
+.titil::after {
+  content: " ";
+  width: 80%;
+  display: block;
+  height: 4px;
+  margin-top: 14px;
+  background-color: #0083d0;
+  transform: translateX(10%);
+  margin-bottom: 30px;
+}
+.team_info {
+  width: 1200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 50px ;
+  padding-top: 100px;
+  box-shadow: 0px 0px 18px rgba(0, 0, 0, 0.2);
+}
+.team_info h1 {
+  margin-bottom: 30px;
+}
+.team_info div {
+  width: 100%;
+  display: flex;
+}
+.team_info div img {
+  width: 100%;
+  height: 380px;
+}
+.team_info div h3 {
+  padding-left: 20px;
+  padding-top: 10%;
+}
+.team_info div p {
+  margin-top: 10px;
+  text-indent: 2em;
+  width: 80%;
+  padding-left: 20px;
+}
+.team_info div .team_content {
+  display: flex;
+  flex-direction: column;
+}
+.bottom {
+  width: 100%;
+  height: 300px;
+  background-color: #0083d0;
+  display: flex;
+  justify-content: center;
+}
+.bottom .bottom_content {
+  width: 1200px;
+  display: flex;
+  justify-content: center;
+}
+.bottom .bottom_content .bottom_left {
+  color: white;
+  width: 40%;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.bottom .bottom_content .bottom_left p {
+  margin: 13px;
+  font-size: 14px;
+}
+.bottom .bottom_content .bottom_left p:nth-child(1) {
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+.bottom .bottom_content .bottom_right {
+  color: white;
+  width: 60%;
+  display: flex;
+  justify-content: space-evenly;
+}
+.bottom .bottom_content .bottom_right .bottom_right_menu {
+  margin-top: 30px;
+}
+.bottom .bottom_content .bottom_right .bottom_right_menu p {
+  margin: 13px auto;
+  font-size: 14px;
+}
+.bottom .bottom_content .bottom_right .bottom_right_menu p:hover:not(:nth-child(1)) {
+  cursor: pointer;
+}
+.bottom .bottom_content .bottom_right .bottom_right_menu p:nth-child(1) {
+  font-size: 16px;
+  font-weight: 500;
+  margin-bottom: 10px;
 }
 @media screen and (max-width: 1200px) {
   .container {
@@ -204,5 +334,53 @@ body {
   }
   .navbar {
     width: 80% !important;
+  }
+  .team_info {
+    width: 100% !important;
+  }
+  .bottom_content {
+    width: 100vw !important;
+  }
+}
+@media screen and (max-width: 768px) {
+  .link {
+    display: none !important;
+    flex-direction: column !important;
+    transition: 2s;
+  }
+  .nav {
+    width: 100% !important;
+  }
+  .menu_content {
+    display: flex !important;
+  }
+  .slide_content h1 {
+    font-size: 40px;
+  }
+  .team_info img {
+    height: 300px !important;
+  }
+}
+@media screen and (max-width: 576px) {
+  .slide_content h1 {
+    font-size: 26px ;
+  }
+  .slide_content h3 {
+    font-size: 16px ;
+  }
+  .team_info img {
+    height: 200px !important;
+  }
+  .bottom_left p:nth-child(1) {
+    font-size: 14px !important;
+  }
+  .bottom_left p:not(:nth-child(1)) {
+    font-size: 10px !important;
+  }
+  .bottom_right_menu p:nth-child(1) {
+    font-size: 14px !important;
+  }
+  .bottom_right_menu p:not(:nth-child(1)) {
+    font-size: 10px !important;
   }
 }
