--- a/CSS/about.css
+++ b/CSS/about.css
@@ -5,10 +5,11 @@
 html,
 body {
   width: 100%;
+  height: 100%;
   flex-wrap: wrap;
   display: flex;
-  justify-content: center;
   flex-direction: row;
+  justify-content: center;
 }
 .container {
   width: 100%;
@@ -16,7 +17,6 @@ body {
   display: flex;
   position: fixed;
   background-color: white;
-  justify-content: center;
   overflow: hidden;
   box-shadow: 0px 0px 18px rgba(0, 0, 0, 0.2);
   z-index: 200;
@@ -75,6 +75,7 @@ body {
   background-color: #0083d0;
   display: flex;
   justify-content: center;
+  align-self: flex-end;
 }
 .bottom .bottom_content {
   width: 1200px;
