--- a/CSS/about.less
+++ b/CSS/about.less
@@ -4,11 +4,11 @@
 }
 html,body{
     width: 100%;
+    height: 100%;
     flex-wrap: wrap;
     display: flex;
-    justify-content: center;
     flex-direction: row;
-    
+    justify-content: center;
 }
 .container{
     width: 100%;
@@ -16,7 +16,6 @@ html,body{
     display: flex;  
     position: fixed;    
     background-color: white;
-    justify-content: center;
     overflow: hidden;
     box-shadow:0px 0px 18px rgba(0, 0, 0, 0.2);
     z-index: 200;  
@@ -78,6 +77,7 @@ html,body{
     background-color: #0083d0;
     display: flex;
     justify-content: center;
+    align-self: flex-end;
     .bottom_content{
         width: 1200px;
         display: flex;
