--- a/CSS/index.less
+++ b/CSS/index.less
@@ -370,9 +370,10 @@ html,body{
         width: 100vw !important; 
     }
 }
+
 @media screen and (max-width:768px){
     .link{
-        display: none !important;
+        display: none;
         flex-direction: column !important;
         transition: 2s;
     }
@@ -393,6 +394,7 @@ html,body{
         }
     }
 }
+
 @media screen and (max-width:576px){
     .slide_content{
         h1{
@@ -422,5 +424,10 @@ html,body{
         p:not(:nth-child(1)){
             font-size: 10px !important;
         }
+    }
+}
+@media screen and (min-width:768px){
+    .link{
+        display: flex;
     }
 }
